--- a/QuickBite/Areas/DeliveryDriver/Views/Home/Details.cshtml
+++ b/QuickBite/Areas/DeliveryDriver/Views/Home/Details.cshtml
@@ -4,7 +4,7 @@
     <h1 class="text-2xl font-bold text-gray-800 mb-6">Order Details</h1>
 
     <div class="bg-white shadow-md rounded-lg p-6">
-        <p class="text-gray-700"><strong>Order ID:</strong> @Model.OrderId</p>
+        <p class="text-gray-700"><strong>Order ID:</strong> @Model.OrderId.ToString().Substring(Model.OrderId.ToString().Length - 4)</p>
         <p class="text-gray-700"><strong>Order Details:</strong> @Model.OrderNotes</p>
         <p class="text-gray-700"><strong>Total Price:</strong> $@Model.OrderTotal.ToString("F2")</p>
         <p class="text-gray-700"><strong>Current Status:</strong> @Model.OrderStatus</p>
@@ -29,6 +29,17 @@
                         class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">
                     Mark as Delivered
                 </button>
+            }
+            @if (Model.OrderStatus == OrderStatus.Confirmed)
+            {
+                <div class="mt-8">
+                    <h2 class="text-lg font-bold text-gray-800 mb-4">Customer Feedback</h2>
+                    <div class="p-4 bg-gray-50 border border-gray-200 rounded-lg">
+                        <p class="text-gray-700">
+                            @Model.OrderFeedback
+                        </p>
+                    </div>
+                </div>
             }
         </div>
     </form>
