--- a/QuickBite/Views/Shared/_SiteAdminLayout.cshtml
+++ b/QuickBite/Views/Shared/_SiteAdminLayout.cshtml
@@ -44,7 +44,9 @@
 
                 <!-- User Menu -->
                 <div class="flex items-center space-x-4">
-                    <partial name="_LoginPartial" />
+                    <div class="hidden md:block">
+                        <a class="text-white" href="/">Go back to Client View</a>
+                    </div>
                 </div>
             </div>
         </nav>
