Fix geocode api call

--- a/QuickBite/Views/RestaurantRegistration/Index.cshtml
+++ b/QuickBite/Views/RestaurantRegistration/Index.cshtml
@@ -40,24 +40,10 @@ Layout = "_Layout";
 
             <div class="mb-4">
                 <label class="block text-gray-700 font-medium">Street Name</label>
-                <input type="text" name="StreetName" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300" required />
+                <input type="text" name="Address" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300" required />
             </div>
 
-            <div class="mb-4">
-                <label class="block text-gray-700 font-medium">Street Number</label>
-                <input type="text" name="StreetNumber" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300" required />
-            </div>
-
-            <div class="mb-4">
-                <label class="block text-gray-700 font-medium">Postal Code</label>
-                <input type="text" name="PostalCode" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300" required />
-            </div>
-
-            <div class="mb-4">
-                <label class="block text-gray-700 font-medium">Postal Town</label>
-                <input type="text" name="PostalTown" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring focus:border-blue-300" required />
-            </div>
-
+          
 
             <div class="mb-4">
                 <label asp-for="DeliveryRadius" class="block text-gray-700 font-medium">Delivery Radius (in km)</label>
